8190494: Different results with UseAVX=3 when calling AVX-512 native function via JNI

Reset mask register after JNI calls

Reviewed-by: kvn, vlivanov